--- a/templates/pages/newLandingPage.html.twig
+++ b/templates/pages/newLandingPage.html.twig
@@ -8,8 +8,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 navB">
-                    <h1>Сайт-визитка </h1>
-                    <p>Поддержи имидж своей компании в интернете!</p>
+                    <h1> Создание Лендинг страницы </h1>
+                    <p>Продающая посадочная страница для развития вашего бизнеса!</p>
                 </div>
             </div>
             <div class="row butPos">
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="row desScr">
-                    <h2>Что входит в разработку Сайта визитки?</h2>
+                    <h2>Что входит в разработку легдинг страницы?</h2>
                     <p>c нашей командой</p>
                 </div>
 
@@ -51,7 +51,7 @@
                 <div class="row fiveBlockInfUs">
                     <div><p>Личный ассистент который всегда готов вам помочь, и отдельная команда разработчиков</p></div>
                     <div><p>Использование актуальных технологий, что даст низкое устаревание проекта</p></div>
-                    <div><p>Полная адаптивность вашего сайта-визитки</p></div>
+                    <div><p>Полная адаптивность вашего сайта каталога</p></div>
                     <div><p>Посадочная страница будет подготовлена к продвижению в поисковых системах</p></div>
                     <div><p>Полное следование срокам и техническая поддержка на протяжении срока согласно вашего тарифа</p></div>
                 </div>
@@ -64,30 +64,24 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 infoServ">
-                        <h1>Купить сайт визитку?</h1>
+                        <h1>Зачем нужен лендинг, или посадочная страница?</h1>
                         <br>
-                        <p>Сайт-визитка - название так и кричит. Тип сайтов похож на вашу виртуальную карточку. А именно, это небольшой сайт которая хранит на себе концентрацию главной информации о вашем бизнесе. Визитки часто выделяются своим дизайном и общим необычным оформлением. .</p>
-                        <p><b>Сайты-визитки вмещают в себя такую информацию:</b></p>
-                        <br>
-                        <ul>
-                            <li>Общие сведения о вашем бизнесе</li>
-                            <li>Описание услуг или продукции которую вы продаете</li>
-                            <li>Дополнительная информация для товара (фото, прайс-листы, портфолио)</li>
-                            <li>Контактные данные (адреса, ФИО ответственных, номера телефонов,  адреса электронных почт)</li>
-                            <li>Дополнительные страницы в зависимости от ваших запросов и требований бизнеса</li>
-                        </ul>
-                        <p><b>Для кого нужен веб-сайт визитка?</b></p>
-                        <br>
-                        <p>Сайт-визитка лучший метод подать ваши контакты и небольшое описание то чем вы занимаетесь в интернете. Сайт будет работать круглосуточно, что дает возможность клиентам не зависеть от времени приема в вашем офисе или что-то подобном.</p>
-                        <p><b>При заказе сайта визитки у нас под ключ:</b></p>
+                        <p>Перед началом давайте определим что такое лендинг страница (lending page). Лендинг сайт – ещё часто называют как посадочная. Этот тип сайтов создан для продажи вашей услуги или товара. Часто на лендинг страницу отправляют трафик с рекламы. Страница разрабатывается с максимально проработанным дизайном текстами и прочими комплектующими – что влияют на рекламу вашей продукции или услуги.</p>
+                        <p><b>Отличительные черты Посадочных страниц?</b></p>
                         <br>
                         <ul>
-                            <li>SEO оптимизация сайта поможет выйти сайту в топы рейтинга поисковика.</li>
-                            <li>Необычный дизайн сможет привлечь внимание вашего клиента и задержать его на сайте.</li>
-                            <li>SEO-тексты смогут повысить заинтересованность посетителей что в последующем увеличит вашу конверсию.</li>
-                            <li>Правильно написанный код - разработчики создают структуру сайта согласно правилам поисковиков, для предотвращения ошибок и предупреждений. </li>
-                            <li>Еженедельный отчет и дружелюбный персонал который всегда подскажет и поможет</li>
+                            <li>Это одностраничные сайты</li>
+                            <li>минимальное количество переходов</li>
+                            <li>максимальная концентрация информации</li>
+                            <li>увеличенная конверсия по сравнению с простыми сайтами</li>
+                            <li>удобен для продвижения определенной услуги – товара</li>
                         </ul>
+                        <p><b>Зачем вам покупать лендинг страницу?</b></p>
+                        <br>
+                        <p>Лединг страницы требуются для целенаправленного продвижения товара или услуги. Так как на лендинг странице прописываются тексты которые более релевантные для поисковой системы. Что такое релевантность – сходство запроса пользователя с содержимым на вашем сайте. Чем больше сходство тем выше вы стоите в рейтинге поисковой системы.  </b></p>
+                        <br>
+                        <p><b>Какая же главная задача лендинг страницы?</b></p>
+                        <p>Самая главная задача этого типа страниц - перевод заинтересованных клиентов в заявки, которые они могут оставить их на вашем сайте.</p>
 
                         <div class="row buttonServ">
                             <div><a href="#"><button>Заказать услугу</button></a></div>
@@ -142,35 +136,37 @@
                     <div id="radius"><p>Пакет Start:</p>
                         <ul>
                             <li>Функции определено в описании макета</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка </li>
                             <li>Шаблонный дизайн</li>
-                            <li>Ограниченный функционал Админ панели</li>
+                            <li>техническая поддержка  10 дней</li>
                             <li>Сроки от 7  дней</li>
                         </ul>
-                        <h1>Цена: от 6.000 грн</h1>
+                        <h1>Цена: от 4.000 грн</h1>
                     </div>
                     <div id="newCol">
                         <p>Пакет High:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
-                            <li>От 15 страниц</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка </li>
+                            <li>Прототипирование вашего сайта</li>
+                            <li>Еженедельная отчетность  </li>
                             <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель – корзина</li>
+                            <li>Форма обратной связи</li>
+                            <li>Подключение виртуальных АТС (умная телефония)</li>
+                            <li>техническая поддержка 90 дней</li>
                             <li>Сроки от 1 – 2  месяца</li>
                         </ul>
-                        <h1>Цена: от 20.000 грн</h1>
+                        <h1>Цена: от 7.000 грн</h1>
                     </div>
                     <div id="radiusTwo"><p>Пакет Medium:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
-                            <li>До 15 страниц</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка</li>
                             <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель</li>
-                            <li>Сроки от 1-2 мес</li>
+                            <li>техническая поддержка 30 дней</li>
+                            <li>Сроки от 1 – 2  месяца</li>
                         </ul>
-                        <h1>Цена: от 15.000 грн</h1>
+                        <h1>Цена: от 5.500 грн</h1>
                     </div>
                 </div>
 
