--- a/templates/pages/newServicesPage.html.twig
+++ b/templates/pages/newServicesPage.html.twig
@@ -143,35 +143,35 @@
                     <div id="radius"><p>Пакет Start:</p>
                         <ul>
                             <li>Функции определено в описании макета</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка</li>
                             <li>Шаблонный дизайн</li>
-                            <li>Ограниченный функционал Админ панели</li>
+                            <li>техническая поддержка 10 дней</li>
                             <li>Сроки от 7  дней</li>
                         </ul>
-                        <h1>Цена: от 6.000 грн</h1>
+                        <h1>Цена: от 3.500 грн</h1>
                     </div>
                     <div id="newCol">
                         <p>Пакет High:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
-                            <li>От 15 страниц</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка</li>
+                            <li>От 5 страниц</li>
                             <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель – корзина</li>
+                            <li>техническая поддержка  90 дней </li>
                             <li>Сроки от 1 – 2  месяца</li>
                         </ul>
-                        <h1>Цена: от 20.000 грн</h1>
+                        <h1>Цена: от 8.500 грн</h1>
                     </div>
                     <div id="radiusTwo"><p>Пакет Medium:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
-                            <li>До 15 страниц</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка</li>
+                            <li>До 5 страниц</li>
                             <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель</li>
+                            <li>техническая поддержка 30 дней </li>
                             <li>Сроки от 1-2 мес</li>
                         </ul>
-                        <h1>Цена: от 15.000 грн</h1>
+                        <h1>Цена: от 7.000 грн</h1>
                     </div>
                 </div>
 
