--- a/templates/pages/newSiteDirectory.html.twig
+++ b/templates/pages/newSiteDirectory.html.twig
@@ -8,8 +8,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 navB">
-                    <h1>Сайт-визитка </h1>
-                    <p>Поддержи имидж своей компании в интернете!</p>
+                    <h1>Создание сайта каталога </h1>
+                    <p>удобно подать товар в виде каталога!</p>
                 </div>
             </div>
             <div class="row butPos">
@@ -36,8 +36,8 @@
                 </div>
 
                 <div class="row desScr">
-                    <h2>Что входит в разработку Сайта визитки?</h2>
-                    <p>c нашей командой</p>
+                    <h2> Что входит в разработку сайта каталога?</h2>
+                    <p> с нашей командой</p>
                 </div>
 
                 <div class="row fiveBlockContUs">
@@ -51,8 +51,8 @@
                 <div class="row fiveBlockInfUs">
                     <div><p>Личный ассистент который всегда готов вам помочь, и отдельная команда разработчиков</p></div>
                     <div><p>Использование актуальных технологий, что даст низкое устаревание проекта</p></div>
-                    <div><p>Полная адаптивность вашего сайта-визитки</p></div>
-                    <div><p>Посадочная страница будет подготовлена к продвижению в поисковых системах</p></div>
+                    <div><p>Полная адаптивность вашего сайта каталога</p></div>
+                    <div><p>Сайт каталог будет подготовлен к продвижению в поисковых системах</p></div>
                     <div><p>Полное следование срокам и техническая поддержка на протяжении срока согласно вашего тарифа</p></div>
                 </div>
 
@@ -64,30 +64,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 infoServ">
-                        <h1>Купить сайт визитку?</h1>
+                        <h1>Зачем нужны сайты каталоги и что это такое?</h1>
                         <br>
-                        <p>Сайт-визитка - название так и кричит. Тип сайтов похож на вашу виртуальную карточку. А именно, это небольшой сайт которая хранит на себе концентрацию главной информации о вашем бизнесе. Визитки часто выделяются своим дизайном и общим необычным оформлением. .</p>
-                        <p><b>Сайты-визитки вмещают в себя такую информацию:</b></p>
-                        <br>
-                        <ul>
-                            <li>Общие сведения о вашем бизнесе</li>
-                            <li>Описание услуг или продукции которую вы продаете</li>
-                            <li>Дополнительная информация для товара (фото, прайс-листы, портфолио)</li>
-                            <li>Контактные данные (адреса, ФИО ответственных, номера телефонов,  адреса электронных почт)</li>
-                            <li>Дополнительные страницы в зависимости от ваших запросов и требований бизнеса</li>
-                        </ul>
-                        <p><b>Для кого нужен веб-сайт визитка?</b></p>
-                        <br>
-                        <p>Сайт-визитка лучший метод подать ваши контакты и небольшое описание то чем вы занимаетесь в интернете. Сайт будет работать круглосуточно, что дает возможность клиентам не зависеть от времени приема в вашем офисе или что-то подобном.</p>
-                        <p><b>При заказе сайта визитки у нас под ключ:</b></p>
-                        <br>
-                        <ul>
-                            <li>SEO оптимизация сайта поможет выйти сайту в топы рейтинга поисковика.</li>
-                            <li>Необычный дизайн сможет привлечь внимание вашего клиента и задержать его на сайте.</li>
-                            <li>SEO-тексты смогут повысить заинтересованность посетителей что в последующем увеличит вашу конверсию.</li>
-                            <li>Правильно написанный код - разработчики создают структуру сайта согласно правилам поисковиков, для предотвращения ошибок и предупреждений. </li>
-                            <li>Еженедельный отчет и дружелюбный персонал который всегда подскажет и поможет</li>
-                        </ul>
+                        <p>Сайт каталог – этот вид сайтов идеально подойдёт, если у вас перечень услуг или товара составляет не одну сотню печатных страниц. Хорошо структурированный электронный каталог напоминает интернет магазин. Однако в чём отличие?</p>
+
+                        <p>Главное отличие в этих двух видах сайтах – отсутствие корзины. Система управления сайтом (CMS) это одна из главных условий создания сайта каталога. Без продуманной системы управления добавления нового продукта или услуги на сайт будет достаточно сложной и будет занимать предостаточно времени. Админ панели или как можно назвать по-другому Системы управлением сайтом мы делаем, учитывая ваши пожелания. </p>
+                        <p>Если перед вами стоит задача сделать удобную площадку для отображения товара или разных услуг, то вам нужен сайт каталог. Лучше любого рассказа он презентует все ваши услуги или продукты. Ведь вам стоит только добавить продукт на страницу через административную панель – и он будет отображаться до того момента пока вы сами не удалите его. </p>
+                        <p><b>Создание сайта каталога</b></p>
+                        <p>Сложная задача из-за чего не каждая студия берется за эти проекты. Мы в OctoWice любим сложности, чем сложнее задачи мы будем решать тем сильнее и профессиональнее мы будет становиться. Цены по сайтам каталогам вы можете узнать в тарифах, учтите, что это приблизительные расценки, точные вы можете получить оставив заявку за сайте или позвонив нам.</p>
+
+                        {#<p><b>Для кого нужен веб-сайт визитка?</b></p>#}
+                        {#<br>#}
+                        {#<p>Сайт-визитка лучший метод подать ваши контакты и небольшое описание то чем вы занимаетесь в интернете. Сайт будет работать круглосуточно, что дает возможность клиентам не зависеть от времени приема в вашем офисе или что-то подобном.</p>#}
+                        {#<p><b>При заказе сайта визитки у нас под ключ:</b></p>#}
+                        {#<br>#}
+                        {#<ul>#}
+                            {#<li>SEO оптимизация сайта поможет выйти сайту в топы рейтинга поисковика.</li>#}
+                            {#<li>Необычный дизайн сможет привлечь внимание вашего клиента и задержать его на сайте.</li>#}
+                            {#<li>SEO-тексты смогут повысить заинтересованность посетителей что в последующем увеличит вашу конверсию.</li>#}
+                            {#<li>Правильно написанный код - разработчики создают структуру сайта согласно правилам поисковиков, для предотвращения ошибок и предупреждений. </li>#}
+                            {#<li>Еженедельный отчет и дружелюбный персонал который всегда подскажет и поможет</li>#}
+                        {#</ul>#}
 
                         <div class="row buttonServ">
                             <div><a href="#"><button>Заказать услугу</button></a></div>
@@ -144,9 +141,9 @@
                     <div id="radius"><p>Пакет Start:</p>
                         <ul>
                             <li>Функции определено в описании макета</li>
-                            <li>Корзина</li>
+                            <li>Ограниченный функционал Админ панели </li>
                             <li>Шаблонный дизайн</li>
-                            <li>Ограниченный функционал Админ панели</li>
+                            <li>техническая поддержка 10 дней</li>
                             <li>Сроки от 7  дней</li>
                         </ul>
                         <h1>Цена: от 6.000 грн</h1>
@@ -155,10 +152,10 @@
                         <p>Пакет High:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
-                            <li>От 15 страниц</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка</li>
+                            <li>От 5 страниц</li>
                             <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель – корзина</li>
+                            <li>техническая поддержка  90 дней </li>
                             <li>Сроки от 1 – 2  месяца</li>
                         </ul>
                         <h1>Цена: от 20.000 грн</h1>
@@ -166,10 +163,10 @@
                     <div id="radiusTwo"><p>Пакет Medium:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
+                            <li>Индивидуальный дизайн </li>
                             <li>До 15 страниц</li>
-                            <li>Корзина</li>
-                            <li>Индивидуальный дизайн</li>
                             <li>Полноценная админ панель</li>
+                            <li>техническая поддержка 30 дней </li>
                             <li>Сроки от 1-2 мес</li>
                         </ul>
                         <h1>Цена: от 15.000 грн</h1>
