--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -37,17 +37,17 @@
                 </div>
 
                 <div class="row firstB">
-                    <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('landingPage') }}"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></a></div>
+                    <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('landingPage') }}"><p>Лендинг Страница<i class="fas fa-arrow-right"></i></p></a></div>
                     <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('cardSite') }}"><p>Сайт визитка <i class="fas fa-arrow-right"></i></p></a></div>
                     <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('siteDirectory') }}"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></a></div>
                     <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('business') }}"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></a></div>
                 </div>
 
                 <div class="row oneB">
-                    <div class="col-lg-2 col-md-2"><p>Одностраничный сайт созданный для продажи товара/услуги</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Цель этих страниц предоставление информации о вашем товаре и услуги, бренда</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Содержит большое количество товаров или услуг без корзины, однако с админ панелью</p></div>
-                    <div class="col-lg-2 col-md-2"><p>нацелен для продажи товара или услуги. Удобный функционал как для клиента как и для вас и ваших работников.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Лендинг страница - одностраничный сайт созданный для продажи товара/услуги</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Сайт визитка - цель этих страниц предоставление информации о вашем товаре и услуги, бренда.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Сайт каталог - содержит большое количество товаров или услуг без корзины, однако с админ панелью</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Интернет магазин - нацелен для продажи товара или услуги. Удобный функционал как для клиента как и для вас и ваших работников.</p></div>
                 </div>
 
                 <div class="row twoS">
@@ -78,8 +78,8 @@
                 </div>
 
                 <div class="row oneB">
-                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Лендинг страница - одностраничный сайт созданный для продажи товара/услуги</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Интернет магазин - нацелен для продажи товара или услуги. Удобный функционал как для клиента как и для вас и ваших работников.</p></div>
                 </div>
 
             </div>
