--- a/templates/pages/newBusinesSite.html.twig
+++ b/templates/pages/newBusinesSite.html.twig
@@ -8,8 +8,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 navB">
-                    <h1>Сайт-визитка </h1>
-                    <p>Поддержи имидж своей компании в интернете!</p>
+                    <h1>Создание интернет магазина</h1>
+                    <p>В сравнении с человеком, ваш сайт продает круглосуточно!</p>
                 </div>
             </div>
             <div class="row butPos">
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="row desScr">
-                    <h2>Что входит в разработку Сайта визитки?</h2>
+                    <h2>Что входит в разработку интернет магазина?</h2>
                     <p>c нашей командой</p>
                 </div>
 
@@ -64,30 +64,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 infoServ">
-                        <h1>Купить сайт визитку?</h1>
+                        <h1>Разработка интернет магазина удобнее шаблонного решения?</h1>
                         <br>
-                        <p>Сайт-визитка - название так и кричит. Тип сайтов похож на вашу виртуальную карточку. А именно, это небольшой сайт которая хранит на себе концентрацию главной информации о вашем бизнесе. Визитки часто выделяются своим дизайном и общим необычным оформлением. .</p>
-                        <p><b>Сайты-визитки вмещают в себя такую информацию:</b></p>
+                        <p>За последние годы интернет бизнес набрал высокого уровня развития, каждая уважающая себя компания создает сайты, интернет площадки. Практически каждый 2 пользователь заходит на сайты чаще чем спрашивает людей где и что купить. Не имея интернет страницы - вы теряете ощутимый пласт рынка.</p>
+                        <p>Интернет магазин – лучшая площадка для показа вашего товара и его продажи. Красивое оформление, хорошо подобранный контент, это не всё что мы можем предложить при создании вашего интернет магазина. Удобность, понятность на уровне жестов, красота – главные рычаги для задержки клиента на вашем сайте. Именно это поможет задержать вашего клиента и предложить ему лучшую услугу или продукт на рынке.</p>
                         <br>
-                        <ul>
-                            <li>Общие сведения о вашем бизнесе</li>
-                            <li>Описание услуг или продукции которую вы продаете</li>
-                            <li>Дополнительная информация для товара (фото, прайс-листы, портфолио)</li>
-                            <li>Контактные данные (адреса, ФИО ответственных, номера телефонов,  адреса электронных почт)</li>
-                            <li>Дополнительные страницы в зависимости от ваших запросов и требований бизнеса</li>
-                        </ul>
-                        <p><b>Для кого нужен веб-сайт визитка?</b></p>
-                        <br>
-                        <p>Сайт-визитка лучший метод подать ваши контакты и небольшое описание то чем вы занимаетесь в интернете. Сайт будет работать круглосуточно, что дает возможность клиентам не зависеть от времени приема в вашем офисе или что-то подобном.</p>
-                        <p><b>При заказе сайта визитки у нас под ключ:</b></p>
-                        <br>
-                        <ul>
-                            <li>SEO оптимизация сайта поможет выйти сайту в топы рейтинга поисковика.</li>
-                            <li>Необычный дизайн сможет привлечь внимание вашего клиента и задержать его на сайте.</li>
-                            <li>SEO-тексты смогут повысить заинтересованность посетителей что в последующем увеличит вашу конверсию.</li>
-                            <li>Правильно написанный код - разработчики создают структуру сайта согласно правилам поисковиков, для предотвращения ошибок и предупреждений. </li>
-                            <li>Еженедельный отчет и дружелюбный персонал который всегда подскажет и поможет</li>
-                        </ul>
+                        <p>Удобность  - один из самых важных факторов в этом обширном понятии это адаптивность. Порядком на 2018 год насчитывается 8.435 миллиардов устройств – это 68% всех людей которые заходят в браузер. Каждый второй человек, который зашел на ваш сайт может не остаться там из-за банальной не удобности, если ваш сайт не будет адаптирован на мобильные устройства. Все наши дизайны и макеты, которые мы предоставляем делаются сугубо адаптивными. Это принципиальное решение.</p>
+                        <p><b>Удобность не только для клиента, а и для производителя</b></p>
+                        <p>Мы уверены – наши работы должны быть приятными по виду и удобными не только для клиента, а и для самого производителя. Заполнение каталога товаров, написание текстов, менеджмент по персоналу и дополнительные функции – за всё это отвечает back-end разработка. Создание административной панели – упростит работу с сайтом, сделает не только работу быстрее, но и приятнее. Административная панель не будет выглядеть как терминал, или что-то страшное! Для административной панели мы так же создаем дизайн и подключаем его. Работа будет приятной не только мозгу, а и глазу!</p>
+                        <p><b>Хочу заказать интернет магазин, что делать?</b></p>
+                        <p>Работа с нами для вас будет очень простой. Вам стоит оставить заявку на нашем сайте с пожеланиями, после чего с вами свяжется наш менеджер по работе с клиентами. Благодаря специалисту подвязному к вашему проекту мы сможем выполнить все ваши пожелания и отладить ваш проект то относительного идеала. Наше сотрудничество будет продуктивным – ждём на вашу заявку!</p>
+
 
                         <div class="row buttonServ">
                             <div><a href="#"><button>Заказать услугу</button></a></div>
@@ -144,9 +131,10 @@
                     <div id="radius"><p>Пакет Start:</p>
                         <ul>
                             <li>Функции определено в описании макета</li>
-                            <li>Корзина</li>
+                            <li>Адаптивная верстка</li>
                             <li>Шаблонный дизайн</li>
                             <li>Ограниченный функционал Админ панели</li>
+                            <li>техническая поддержка - 10 дней</li>
                             <li>Сроки от 7  дней</li>
                         </ul>
                         <h1>Цена: от 6.000 грн</h1>
@@ -155,10 +143,11 @@
                         <p>Пакет High:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
+                            <li>Адаптивная верстка</li>
                             <li>От 15 страниц</li>
-                            <li>Корзина</li>
                             <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель – корзина</li>
+                            <li>Полноценная админ панель</li>
+                            <li>техническая поддержка 90 дней </li>
                             <li>Сроки от 1 – 2  месяца</li>
                         </ul>
                         <h1>Цена: от 20.000 грн</h1>
@@ -166,11 +155,12 @@
                     <div id="radiusTwo"><p>Пакет Medium:</p>
                         <ul>
                             <li>Функционал обсуждается лично</li>
+                            <li>Адаптивная верстка</li>
                             <li>До 15 страниц</li>
-                            <li>Корзина</li>
                             <li>Индивидуальный дизайн</li>
                             <li>Полноценная админ панель</li>
-                            <li>Сроки от 1-2 мес</li>
+                            <li>техническая поддержка 30 дней</li>
+                            <li>Сроки от 1 – 2  месяца</li>
                         </ul>
                         <h1>Цена: от 15.000 грн</h1>
                     </div>
