--- a/public/style/style.css
+++ b/public/style/style.css
@@ -65,10 +65,12 @@ body {
   margin-top: 100px; }
   .octH h1 {
     font-size: 50px;
-    font-weight: 300; }
+    font-weight: 300;
+    text-align: left; }
   .octH p {
     color: #999999;
-    margin-left: 60px; }
+    margin-left: 60px;
+    text-align: left; }
 
 .infoO {
   z-index: 100; }
