--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -93,10 +93,12 @@ body {
     h1 {
         font-size: 50px;
         font-weight: 300;
+        text-align: left;
     }
     p {
         color: #999999;
         margin-left: 60px;
+        text-align: left;
     }
 }
 
@@ -507,7 +509,6 @@ body {
         cursor: pointer;
     }
 }
-
 
 
 .articleTwo {
