Changed links includes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,16 +7,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            {{ encore_entry_link_tags('app') }}
             <link rel="stylesheet" href="/style/style.css">
-            <link rel="stylesheet" href="/AboutUS/aboutUs.css">
-            <link rel="stylesheet" href="/Services/services.css">
-            <link rel="stylesheet" href="/Blog/blog.css">
             <link rel="stylesheet" href="/mediaOcto/media.css">
             <link rel="stylesheet" href="/errors/errors.css">
-            <link rel="stylesheet" href="/choicePage/choicePage.css">
             <link rel="stylesheet" href="/adaptiveMenu/adaptiveMenu.css">
-            <link rel="stylesheet" href="/Blog/articleCSS/style.css">
 
 
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.css" integrity="sha256-Qm8mv8NyEDwniBPKGqdKIpYT0KFZlWY7GJ2F0cs3N/g=" crossorigin="anonymous" />
@@ -26,7 +21,7 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
 
-            {#<link rel="shortcut icon" href="{{ asset('/img/Logo.jpg') }}" type="image/x-icon">#}
+            <link rel="shortcut icon" href="{{ asset('/img/Logo.jpg') }}" type="image/x-icon">
 
 
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
