--- a/templates/pages/aboutUsPage.html.twig
+++ b/templates/pages/aboutUsPage.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}AboutUs{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="/AboutUS/aboutUs.css">
+{% endblock %}
 {% block body %}
 
 <nav class="AbtN">
