--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -128,9 +128,11 @@
 
 
             <div class="blInF">
+                <a href="#">
                 <div class="Serv">
                     <a href="#"><h2>Наши услуги</h2></a>
                 </div>
+                </a>
             </div>
 
 
