--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -2266,7 +2266,18 @@
         /*padding-bottom: 200px;*/
     }
 
+    /*.costServ {*/
+        /*height: auto !important;*/
+    /*}*/
+
+    /*.thereBlock {*/
+        /*padding: 50px 0;*/
+        /*display: flex;*/
+        /*justify-content: center;*/
+
 }
+
+
 
 @media only screen and (min-width: 1440px) and (max-width: 1920px)  {
 
