--- a/templates/pages/aboutUsPage.html.twig
+++ b/templates/pages/aboutUsPage.html.twig
@@ -32,6 +32,12 @@
                 </div>
             </div>
 
+
+        </div>
+
+        <div class="bgBl">
+
+            <div class="container">
             <div class="posSh">
                 <div class="row">
                     <div class="col-lg-2 col-md-2 blBloInBeli"></div>
@@ -50,7 +56,8 @@
                 </div>
             </div>
         </div>
-        <div class="bgBl"></div>
+
+        </div>
 
 
     </section>
