--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,10 +9,14 @@
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             <link rel="stylesheet" href="/style/style.css">
+            <link rel="stylesheet" href="/AboutUS/aboutUs.css">
+{#            <link rel="stylesheet" href="/Blog/blog.css">#}
+            <link rel="stylesheet" href="/Services/services.css">
             <link rel="stylesheet" href="/mediaOcto/media.css">
             <link rel="stylesheet" href="/errors/errors.css">
             <link rel="stylesheet" href="/adaptiveMenu/adaptiveMenu.css">
-
+{#            <link rel="stylesheet" href="/Blog/articleCSS/style.css">#}
+{#            <link rel="stylesheet" href="/choicePage/choicePage.css">#}
 
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.css" integrity="sha256-Qm8mv8NyEDwniBPKGqdKIpYT0KFZlWY7GJ2F0cs3N/g=" crossorigin="anonymous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/item.css" integrity="sha256-Zmhl7JzF/rWYir2WAAbCgfX9pJtoQ43vQOYsRv6jqAo=" crossorigin="anonymous" />
