--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -3,7 +3,7 @@
 {% block title %}AboutUs{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="/Services/services.css">
+    <link rel="stylesheet" href="/choicePage/choicePage.css">
 {% endblock %}
 {% block body %}
 
