--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -4,6 +4,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="/Services/services.css">
+    <link rel="stylesheet" href="/choicePage/choicePage.css">
 {% endblock %}
 {% block body %}
 
